--- a/Homework-1/contact.html
+++ b/Homework-1/contact.html
@@ -108,7 +108,7 @@
     }
 
     .bottom-right {
-      position: absolute;
+      position: fixed;
       bottom: 3px;
       right: 16px;
     }
@@ -207,11 +207,11 @@
     </div>
 
     <div class="bottom-right">
-      <a href="https://www.facebook.com/dimitris.chr.54" class="fa fa-facebook"></a>
-      <a href="https://www.google.com" class="fa fa-google"></a>
-      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-      <a href="https://www.skype.com" class="fa fa-skype"></a>
+      <a href="https://www.facebook.com/dimitris.chr.54" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.google.com" target="_blank" class="fa fa-google"></a>
+      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.skype.com" target="_blank" class="fa fa-skype"></a>
     </div>
   </div>
 
