--- a/Homework-1/info.html
+++ b/Homework-1/info.html
@@ -133,7 +133,7 @@
     }
 
     .bottom-right {
-      position: absolute;
+      position: fixed;
       bottom: 3px;
       right: 16px;
     }
@@ -213,8 +213,8 @@
       <p class="title">Undergraduate Student</p>
       <p>University of Thessaly</p>
       <div style="margin: 24px 0;">
-        <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/"><i class="fa fa-linkedin"></i></a>
-        <a href="https://www.facebook.com/dimitris.chr.54"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/dimitris.chr.54" target="_blank"><i class="fa fa-facebook"></i></a>
       </div>
       <a href="contact.html"><button>Contact</button></a>
     </div>
@@ -228,15 +228,15 @@
          engineering and I expect to graduate this year.<br><br>
          For more information visit my linkedin account by pressing the following button "Read More...".<br>
       </p>
-      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/"><button>Read More...</button></a>
+      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" target="_blank"><button>Read More...</button></a>
     </div>
 
     <div class="bottom-right">
-      <a href="https://www.facebook.com/dimitris.chr.54" class="fa fa-facebook"></a>
-      <a href="https://www.google.com" class="fa fa-google"></a>
-      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-      <a href="https://www.skype.com" class="fa fa-skype"></a>
+      <a href="https://www.facebook.com/dimitris.chr.54" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.google.com" target="_blank" class="fa fa-google"></a>
+      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.skype.com" target="_blank" class="fa fa-skype"></a>
     </div>
   </div>
 
