--- a/Homework-1/project.html
+++ b/Homework-1/project.html
@@ -74,7 +74,7 @@
     }
 
     .comingsoon{
-      position: absolute;
+      position: fixed;
       top: 30%;
       left: 35%;
       background-color: rgb(0,0,0); /* Fallback color */
@@ -100,11 +100,11 @@
 
     .github-account{
       position: absolute;
-      top: 48%;
-      left: 35%;
-      width: 30%;
+      top: 0px;
+      right: 0px;
+      width: 40%;
       text-align: center;
-      margin: 0px 30px 0px 20px;
+      margin: auto;
     }
 
     .github-account h3{
@@ -112,7 +112,7 @@
     }
 
     .bottom-right {
-      position: absolute;
+      position: fixed;
       bottom: 3px;
       right: 16px;
     }
@@ -199,15 +199,15 @@
     </div>
 
     <div class="github-account">
-      <h3>But you can visit my github account:<a href="https:github.com/dimitris-christodoulou57" class="fa fa-github"></a></h3>
+      <h3>But you can visit my github account:<a href="https:github.com/dimitris-christodoulou57" target="_blank" class="fa fa-github"></a></h3>
     </div>
 
     <div class="bottom-right">
-      <a href="https://www.facebook.com/dimitris.chr.54" class="fa fa-facebook"></a>
-      <a href="https://www.google.com" class="fa fa-google"></a>
-      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-      <a href="https://www.skype.com" class="fa fa-skype"></a>
+      <a href="https://www.facebook.com/dimitris.chr.54" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.google.com" target="_blank" class="fa fa-google"></a>
+      <a href="https://www.linkedin.com/in/dimitris-christodoulou-09383118b/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.skype.com" target="_blank" class="fa fa-skype"></a>
     </div>
   </div>
 
